implemented redis for caching all database table

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "joi": "^17.4.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
+    "redis": "^3.1.2",
     "sequelize": "^5.22.4",
     "sequelize-auto": "^0.8.3"
   },
